Update the likelylocales to CLDR40

--- a/js/data/locale/localematch.json
+++ b/js/data/locale/localematch.json
@@ -49,7 +49,7 @@
         "Adlm": "ff-Adlm-GN",
         "Afak": "djk-Afak-SR",
         "Afak-SR": "djk-Afak-SR",
-        "Aghb": "lez-Aghb-RU",
+        "Aghb": "udi-Aghb-RU",
         "Ahom": "aho-Ahom-IN",
         "Arab": "ar-Arab-EG",
         "Arab-AE": "ar-Arab-AE",
@@ -158,13 +158,15 @@
         "Cher": "chr-Cher-US",
         "Chrs": "xco-Chrs-UZ",
         "Copt": "cop-Copt-EG",
+        "Cpmn": "und-Cpmn-CY",
+        "Cpmn-CY": "und-Cpmn-CY",
         "Cprt": "grc-Cprt-CY",
         "Cyrl": "ru-Cyrl-RU",
         "Cyrl-AL": "mk-Cyrl-AL",
         "Cyrl-BA": "sr-Cyrl-BA",
         "Cyrl-BG": "bg-Cyrl-BG",
         "Cyrl-BY": "be-Cyrl-BY",
-        "Cyrl-GE": "ab-Cyrl-GE",
+        "Cyrl-GE": "os-Cyrl-GE",
         "Cyrl-GR": "mk-Cyrl-GR",
         "Cyrl-KG": "ky-Cyrl-KG",
         "Cyrl-KZ": "kk-Cyrl-KZ",
@@ -209,7 +211,7 @@
         "ER": "ti-Ethi-ER",
         "ES": "es-Latn-ES",
         "ET": "am-Ethi-ET",
-        "EU": "en-Latn-GB",
+        "EU": "en-Latn-IE",
         "EZ": "de-Latn-EZ",
         "Egyp": "egy-Egyp-EG",
         "Elba": "sq-Elba-AL",
@@ -272,7 +274,6 @@
         "Hans-CN": "zh-Hans-CN",
         "Hant": "zh-Hant-TW",
         "Hant-MO": "zh-Hant-MO",
-        "Hatr": "mis-Hatr-IQ",
         "Hebr": "he-Hebr-IL",
         "Hebr-CA": "yi-Hebr-CA",
         "Hebr-GB": "yi-Hebr-GB",
@@ -283,7 +284,7 @@
         "Hira": "ja-Hira-JP",
         "Hluw": "hlu-Hluw-TR",
         "Hmng": "hnj-Hmng-LA",
-        "Hmnp": "mww-Hmnp-US",
+        "Hmnp": "hnj-Hmnp-US",
         "Hrkt": "ja-Hrkt-JP",
         "Hrkt-JP": "ja-Hrkt-JP",
         "Hung": "hu-Hung-HU",
@@ -602,7 +603,7 @@
         "Mand": "myz-Mand-IR",
         "Mani": "xmn-Mani-CN",
         "Marc": "bo-Marc-CN",
-        "Medf": "mis-Medf-NG",
+        "Medf": "dmf-Medf-NG",
         "Mend": "men-Mend-SL",
         "Merc": "xmr-Merc-SD",
         "Mero": "xmr-Mero-SD",
@@ -640,6 +641,7 @@
         "Orya": "or-Orya-IN",
         "Osge": "osa-Osge-US",
         "Osma": "so-Osma-SO",
+        "Ougr": "oui-Ougr-143",
         "PA": "es-Latn-PA",
         "PE": "es-Latn-PE",
         "PF": "fr-Latn-PF",
@@ -748,6 +750,8 @@
         "Tibt": "bo-Tibt-CN",
         "Tibt-BT": "dz-Tibt-BT",
         "Tirh": "mai-Tirh-IN",
+        "Tnsa": "nst-Tnsa-IN",
+        "Toto": "txo-Toto-IN",
         "UA": "uk-Cyrl-UA",
         "UG": "sw-Latn-UG",
         "UM": "en-Latn-UM",
@@ -763,6 +767,7 @@
         "VN": "vi-Latn-VN",
         "VU": "bi-Latn-VU",
         "Vaii": "vai-Vaii-LR",
+        "Vith": "sq-Vith-AL",
         "WF": "fr-Latn-WF",
         "WS": "sm-Latn-WS",
         "Wara": "hoc-Wara-IN",
@@ -1284,6 +1289,9 @@
         "bkv": "bkv-Latn-ZZ",
         "bkv-Latn": "bkv-Latn-ZZ",
         "bkv-ZZ": "bkv-Latn-ZZ",
+        "blg": "blg-Latn-MY",
+        "blg-Latn": "blg-Latn-MY",
+        "blg-MY": "blg-Latn-MY",
         "blt": "blt-Tavt-VN",
         "blt-Tavt": "blt-Tavt-VN",
         "blt-VN": "blt-Tavt-VN",
@@ -1595,9 +1603,9 @@
         "dad": "dad-Latn-ZZ",
         "dad-Latn": "dad-Latn-ZZ",
         "dad-ZZ": "dad-Latn-ZZ",
-        "daf": "daf-Latn-ZZ",
-        "daf-Latn": "daf-Latn-ZZ",
-        "daf-ZZ": "daf-Latn-ZZ",
+        "daf": "daf-Latn-CI",
+        "daf-CI": "daf-Latn-CI",
+        "daf-Latn": "daf-Latn-CI",
         "dag": "dag-Latn-ZZ",
         "dag-Latn": "dag-Latn-ZZ",
         "dag-ZZ": "dag-Latn-ZZ",
@@ -1666,16 +1674,19 @@
         "djk": "djk-Afak-SR",
         "djk-Afak": "djk-Afak-SR",
         "djk-SR": "djk-Afak-SR",
+        "dmf": "dmf-Medf-NG",
+        "dmf-Medf": "dmf-Medf-NG",
+        "dmf-NG": "dmf-Medf-NG",
         "dnj": "dnj-Latn-CI",
         "dnj-CI": "dnj-Latn-CI",
         "dnj-Latn": "dnj-Latn-CI",
         "dob": "dob-Latn-ZZ",
         "dob-Latn": "dob-Latn-ZZ",
         "dob-ZZ": "dob-Latn-ZZ",
-        "doi": "doi-Arab-IN",
-        "doi-Arab": "doi-Arab-IN",
+        "doi": "doi-Deva-IN",
+        "doi-Deva": "doi-Deva-IN",
         "doi-Dogr": "doi-Dogr-IN",
-        "doi-IN": "doi-Arab-IN",
+        "doi-IN": "doi-Deva-IN",
         "dop": "dop-Latn-ZZ",
         "dop-Latn": "dop-Latn-ZZ",
         "dop-ZZ": "dop-Latn-ZZ",
@@ -1936,6 +1947,9 @@
         "ext": "ext-Latn-ES",
         "ext-ES": "ext-Latn-ES",
         "ext-Latn": "ext-Latn-ES",
+        "eza": "eza-Latn-ZZ",
+        "eza-Latn": "eza-Latn-ZZ",
+        "eza-ZZ": "eza-Latn-ZZ",
         "fa": "fa-Arab-IR",
         "fa-AF": "fa-Arab-AF",
         "fa-Arab": "fa-Arab-IR",
@@ -2340,7 +2354,6 @@
         "hi": "hi-Deva-IN",
         "hi-Deva": "hi-Deva-IN",
         "hi-IN": "hi-Deva-IN",
-        "hi-Latn": "hi-Latn-IN",
         "hia": "hia-Latn-ZZ",
         "hia-Latn": "hia-Latn-ZZ",
         "hia-ZZ": "hia-Latn-ZZ",
@@ -2374,9 +2387,9 @@
         "hne": "hne-Deva-IN",
         "hne-Deva": "hne-Deva-IN",
         "hne-IN": "hne-Deva-IN",
-        "hnj": "hnj-Hmng-LA",
-        "hnj-Hmng": "hnj-Hmng-LA",
-        "hnj-LA": "hnj-Hmng-LA",
+        "hnj": "hnj-Hmnp-US",
+        "hnj-Hmnp": "hnj-Hmnp-US",
+        "hnj-US": "hnj-Hmnp-US",
         "hnn": "hnn-Latn-PH",
         "hnn-Latn": "hnn-Latn-PH",
         "hnn-PH": "hnn-Latn-PH",
@@ -2549,6 +2562,9 @@
         "jam": "jam-Latn-JM",
         "jam-JM": "jam-Latn-JM",
         "jam-Latn": "jam-Latn-JM",
+        "jar": "jar-Latn-ZZ",
+        "jar-Latn": "jar-Latn-ZZ",
+        "jar-ZZ": "jar-Latn-ZZ",
         "jbo": "jbo-Latn-001",
         "jbo-001": "jbo-Latn-001",
         "jbo-Latn": "jbo-Latn-001",
@@ -2650,9 +2666,9 @@
         "kde": "kde-Latn-TZ",
         "kde-Latn": "kde-Latn-TZ",
         "kde-TZ": "kde-Latn-TZ",
-        "kdh": "kdh-Arab-TG",
-        "kdh-Arab": "kdh-Arab-TG",
-        "kdh-TG": "kdh-Arab-TG",
+        "kdh": "kdh-Latn-TG",
+        "kdh-Latn": "kdh-Latn-TG",
+        "kdh-TG": "kdh-Latn-TG",
         "kdl": "kdl-Latn-ZZ",
         "kdl-Latn": "kdl-Latn-ZZ",
         "kdl-ZZ": "kdl-Latn-ZZ",
@@ -2868,7 +2884,6 @@
         "kru-IN": "kru-Deva-IN",
         "ks": "ks-Arab-IN",
         "ks-Arab": "ks-Arab-IN",
-        "ks-Deva": "ks-Deva-IN",
         "ks-IN": "ks-Arab-IN",
         "ksb": "ksb-Latn-TZ",
         "ksb-Latn": "ksb-Latn-TZ",
@@ -2963,6 +2978,9 @@
         "kxe": "kxe-Latn-ZZ",
         "kxe-Latn": "kxe-Latn-ZZ",
         "kxe-ZZ": "kxe-Latn-ZZ",
+        "kxl": "kxl-Deva-IN",
+        "kxl-Deva": "kxl-Deva-IN",
+        "kxl-IN": "kxl-Deva-IN",
         "kxm": "kxm-Thai-TH",
         "kxm-TH": "kxm-Thai-TH",
         "kxm-Thai": "kxm-Thai-TH",
@@ -2988,6 +3006,9 @@
         "kyx": "kyx-Latn-ZZ",
         "kyx-Latn": "kyx-Latn-ZZ",
         "kyx-ZZ": "kyx-Latn-ZZ",
+        "kzh": "kzh-Arab-ZZ",
+        "kzh-Arab": "kzh-Arab-ZZ",
+        "kzh-ZZ": "kzh-Arab-ZZ",
         "kzj": "kzj-Latn-MY",
         "kzj-Latn": "kzj-Latn-MY",
         "kzj-MY": "kzj-Latn-MY",
@@ -3333,10 +3354,6 @@
         "min": "min-Latn-ID",
         "min-ID": "min-Latn-ID",
         "min-Latn": "min-Latn-ID",
-        "mis": "mis-Hatr-IQ",
-        "mis-Hatr": "mis-Hatr-IQ",
-        "mis-IQ": "mis-Hatr-IQ",
-        "mis-Medf": "mis-Medf-NG",
         "miw": "miw-Latn-ZZ",
         "miw-Latn": "miw-Latn-ZZ",
         "miw-ZZ": "miw-Latn-ZZ",
@@ -3441,7 +3458,6 @@
         "ms": "ms-Latn-MY",
         "ms-BN": "ms-Latn-BN",
         "ms-CC": "ms-Arab-CC",
-        "ms-ID": "ms-Latn-ID",
         "ms-Latn": "ms-Latn-MY",
         "ms-MY": "ms-Latn-MY",
         "ms-SG": "ms-Latn-SG",
@@ -3730,6 +3746,9 @@
         "nss": "nss-Latn-ZZ",
         "nss-Latn": "nss-Latn-ZZ",
         "nss-ZZ": "nss-Latn-ZZ",
+        "nst": "nst-Tnsa-IN",
+        "nst-IN": "nst-Tnsa-IN",
+        "nst-Tnsa": "nst-Tnsa-IN",
         "ntm": "ntm-Latn-ZZ",
         "ntm-Latn": "ntm-Latn-ZZ",
         "ntm-ZZ": "ntm-Latn-ZZ",
@@ -3823,6 +3842,9 @@
         "otk": "otk-Orkh-MN",
         "otk-MN": "otk-Orkh-MN",
         "otk-Orkh": "otk-Orkh-MN",
+        "oui": "oui-Ougr-143",
+        "oui-143": "oui-Ougr-143",
+        "oui-Ougr": "oui-Ougr-143",
         "ozm": "ozm-Latn-ZZ",
         "ozm-Latn": "ozm-Latn-ZZ",
         "ozm-ZZ": "ozm-Latn-ZZ",
@@ -3989,9 +4011,9 @@
         "rgn": "rgn-Latn-IT",
         "rgn-IT": "rgn-Latn-IT",
         "rgn-Latn": "rgn-Latn-IT",
-        "rhg": "rhg-Arab-MM",
-        "rhg-Arab": "rhg-Arab-MM",
-        "rhg-MM": "rhg-Arab-MM",
+        "rhg": "rhg-Rohg-MM",
+        "rhg-MM": "rhg-Rohg-MM",
+        "rhg-Rohg": "rhg-Rohg-MM",
         "ria": "ria-Latn-IN",
         "ria-IN": "ria-Latn-IN",
         "ria-Latn": "ria-Latn-IN",
@@ -4596,9 +4618,9 @@
         "trv": "trv-Latn-TW",
         "trv-Latn": "trv-Latn-TW",
         "trv-TW": "trv-Latn-TW",
-        "trw": "trw-Arab-ZZ",
-        "trw-Arab": "trw-Arab-ZZ",
-        "trw-ZZ": "trw-Arab-ZZ",
+        "trw": "trw-Arab-PK",
+        "trw-Arab": "trw-Arab-PK",
+        "trw-PK": "trw-Arab-PK",
         "ts": "ts-Latn-ZA",
         "ts-Latn": "ts-Latn-ZA",
         "ts-ZA": "ts-Latn-ZA",
@@ -4668,6 +4690,9 @@
         "txg": "txg-Tang-CN",
         "txg-CN": "txg-Tang-CN",
         "txg-Tang": "txg-Tang-CN",
+        "txo": "txo-Toto-IN",
+        "txo-IN": "txo-Toto-IN",
+        "txo-Toto": "txo-Toto-IN",
         "ty": "ty-Latn-PF",
         "ty-Latn": "ty-Latn-PF",
         "ty-PF": "ty-Latn-PF",
@@ -4683,6 +4708,9 @@
         "ubu": "ubu-Latn-ZZ",
         "ubu-Latn": "ubu-Latn-ZZ",
         "ubu-ZZ": "ubu-Latn-ZZ",
+        "udi": "udi-Aghb-RU",
+        "udi-Aghb": "udi-Aghb-RU",
+        "udi-RU": "udi-Aghb-RU",
         "udm": "udm-Cyrl-RU",
         "udm-Cyrl": "udm-Cyrl-RU",
         "udm-RU": "udm-Cyrl-RU",
@@ -4752,7 +4780,7 @@
         "und-AX": "sv-Latn-AX",
         "und-AZ": "az-Latn-AZ",
         "und-Adlm": "ff-Adlm-GN",
-        "und-Aghb": "lez-Aghb-RU",
+        "und-Aghb": "udi-Aghb-RU",
         "und-Ahom": "aho-Ahom-IN",
         "und-Arab": "ar-Arab-EG",
         "und-Arab-CC": "ms-Arab-CC",
@@ -4833,11 +4861,13 @@
         "und-Cher": "chr-Cher-US",
         "und-Chrs": "xco-Chrs-UZ",
         "und-Copt": "cop-Copt-EG",
+        "und-Cpmn": "und-Cpmn-CY",
+        "und-Cpmn-CY": "und-Cpmn-CY",
         "und-Cprt": "grc-Cprt-CY",
         "und-Cyrl": "ru-Cyrl-RU",
         "und-Cyrl-AL": "mk-Cyrl-AL",
         "und-Cyrl-BA": "sr-Cyrl-BA",
-        "und-Cyrl-GE": "ab-Cyrl-GE",
+        "und-Cyrl-GE": "os-Cyrl-GE",
         "und-Cyrl-GR": "mk-Cyrl-GR",
         "und-Cyrl-MD": "uk-Cyrl-MD",
         "und-Cyrl-RO": "bg-Cyrl-RO",
@@ -4867,7 +4897,7 @@
         "und-ER": "ti-Ethi-ER",
         "und-ES": "es-Latn-ES",
         "und-ET": "am-Ethi-ET",
-        "und-EU": "en-Latn-GB",
+        "und-EU": "en-Latn-IE",
         "und-EZ": "de-Latn-EZ",
         "und-Egyp": "egy-Egyp-EG",
         "und-Elba": "sq-Elba-AL",
@@ -4920,7 +4950,6 @@
         "und-Hano": "hnn-Hano-PH",
         "und-Hans": "zh-Hans-CN",
         "und-Hant": "zh-Hant-TW",
-        "und-Hatr": "mis-Hatr-IQ",
         "und-Hebr": "he-Hebr-IL",
         "und-Hebr-CA": "yi-Hebr-CA",
         "und-Hebr-GB": "yi-Hebr-GB",
@@ -4930,7 +4959,7 @@
         "und-Hira": "ja-Hira-JP",
         "und-Hluw": "hlu-Hluw-TR",
         "und-Hmng": "hnj-Hmng-LA",
-        "und-Hmnp": "mww-Hmnp-US",
+        "und-Hmnp": "hnj-Hmnp-US",
         "und-Hung": "hu-Hung-HU",
         "und-IC": "es-Latn-IC",
         "und-ID": "id-Latn-ID",
@@ -5039,7 +5068,7 @@
         "und-Mand": "myz-Mand-IR",
         "und-Mani": "xmn-Mani-CN",
         "und-Marc": "bo-Marc-CN",
-        "und-Medf": "mis-Medf-NG",
+        "und-Medf": "dmf-Medf-NG",
         "und-Mend": "men-Mend-SL",
         "und-Merc": "xmr-Merc-SD",
         "und-Mero": "xmr-Mero-SD",
@@ -5077,6 +5106,7 @@
         "und-Orya": "or-Orya-IN",
         "und-Osge": "osa-Osge-US",
         "und-Osma": "so-Osma-SO",
+        "und-Ougr": "oui-Ougr-143",
         "und-PA": "es-Latn-PA",
         "und-PE": "es-Latn-PE",
         "und-PF": "fr-Latn-PF",
@@ -5180,6 +5210,8 @@
         "und-Thai-LA": "kdt-Thai-LA",
         "und-Tibt": "bo-Tibt-CN",
         "und-Tirh": "mai-Tirh-IN",
+        "und-Tnsa": "nst-Tnsa-IN",
+        "und-Toto": "txo-Toto-IN",
         "und-UA": "uk-Cyrl-UA",
         "und-UG": "sw-Latn-UG",
         "und-UM": "en-Latn-UM",
@@ -5195,6 +5227,7 @@
         "und-VN": "vi-Latn-VN",
         "und-VU": "bi-Latn-VU",
         "und-Vaii": "vai-Vaii-LR",
+        "und-Vith": "sq-Vith-AL",
         "und-WF": "fr-Latn-WF",
         "und-WS": "sm-Latn-WS",
         "und-Wara": "hoc-Wara-IN",
@@ -5238,6 +5271,9 @@
         "usa": "usa-Latn-ZZ",
         "usa-Latn": "usa-Latn-ZZ",
         "usa-ZZ": "usa-Latn-ZZ",
+        "uth": "uth-Latn-ZZ",
+        "uth-Latn": "uth-Latn-ZZ",
+        "uth-ZZ": "uth-Latn-ZZ",
         "utr": "utr-Latn-ZZ",
         "utr-Latn": "utr-Latn-ZZ",
         "utr-ZZ": "utr-Latn-ZZ",
@@ -5595,7 +5631,6 @@
         "zh-Hant": "zh-Hant-TW",
         "zh-ID": "zh-Hant-ID",
         "zh-MO": "zh-Hant-MO",
-        "zh-MY": "zh-Hant-MY",
         "zh-PA": "zh-Hant-PA",
         "zh-PF": "zh-Hant-PF",
         "zh-PH": "zh-Hant-PH",
