Update list formats to CLDR40

--- a/js/data/locale/fa/list.json
+++ b/js/data/locale/fa/list.json
@@ -62,7 +62,7 @@
             "2": "{0}،‏ {1}",
             "start": "{0}،‏ {1}",
             "middle": "{0}،‏ {1}",
-            "end": "{0}،‏ {1}"
+            "end": "{0}، و {1}"
         },
         "long": {
             "2": "{0} و {1}",
