--- a/js/data/locale/ga/list.json
+++ b/js/data/locale/ga/list.json
@@ -2,25 +2,25 @@
     "standard": {
         "medium": {
             "2": "{0} agus {1}",
-            "end": "{0}, agus {1}"
+            "end": "{0} agus {1}"
         },
         "long": {
             "2": "{0} agus {1}",
-            "end": "{0}, agus {1}"
+            "end": "{0} agus {1}"
         },
         "full": {
             "2": "{0} agus {1}",
-            "end": "{0}, agus {1}"
+            "end": "{0} agus {1}"
         }
     },
     "or": {
         "short": {
             "2": "{0} nó {1}",
-            "end": "{0}, nó {1}"
+            "end": "{0} nó {1}"
         },
         "medium": {
             "2": "{0} nó {1}",
-            "end": "{0}, nó {1}"
+            "end": "{0} nó {1}"
         },
         "long": {
             "2": "{0} nó {1}",
@@ -40,11 +40,11 @@
         },
         "long": {
             "2": "{0} agus {1}",
-            "end": "{0}, agus {1}"
+            "end": "{0} agus {1}"
         },
         "full": {
             "2": "{0} agus {1}",
-            "end": "{0}, agus {1}"
+            "end": "{0} agus {1}"
         }
     }
 }
