--- a/js/data/locale/kok/list.json
+++ b/js/data/locale/kok/list.json
@@ -1,7 +1,8 @@
 {
     "standard": {
         "medium": {
-            "2": "{0} & {1}"
+            "2": "{0} & {1}",
+            "end": "{0}, & {1}"
         }
     },
     "or": {
@@ -24,6 +25,7 @@
     },
     "unit": {
         "short": {
+            "2": "{0} {1}",
             "start": "{0} {1}",
             "middle": "{0} {1}",
             "end": "{0} {1}"
