--- a/js/data/locale/lo/list.json
+++ b/js/data/locale/lo/list.json
@@ -4,7 +4,8 @@
             "2": "{0} ແລະ {1}"
         },
         "medium": {
-            "2": "{0} ແລະ {1}"
+            "2": "{0} ແລະ {1}",
+            "end": "{0} ແລະ {1}"
         },
         "long": {
             "2": "{0} ແລະ {1}"
