--- a/js/data/locale/ps/list.json
+++ b/js/data/locale/ps/list.json
@@ -25,6 +25,20 @@
             "end": "{0}، او {1}"
         }
     },
+    "or": {
+        "short": {
+            "end": "{0}, یا {1}"
+        },
+        "medium": {
+            "end": "{0}, یا {1}"
+        },
+        "long": {
+            "end": "{0}, یا {1}"
+        },
+        "full": {
+            "end": "{0}, یا {1}"
+        }
+    },
     "unit": {
         "short": {
             "2": "{0} {1}",
