--- a/js/data/locale/dsb/list.json
+++ b/js/data/locale/dsb/list.json
@@ -17,6 +17,24 @@
             "end": "{0} a {1}"
         }
     },
+    "or": {
+        "short": {
+            "2": "{0} abo {1}",
+            "end": "{0} abo {1}"
+        },
+        "medium": {
+            "2": "{0} abo {1}",
+            "end": "{0} abo {1}"
+        },
+        "long": {
+            "2": "{0} abo {1}",
+            "end": "{0} abo {1}"
+        },
+        "full": {
+            "2": "{0} abo {1}",
+            "end": "{0} abo {1}"
+        }
+    },
     "unit": {
         "medium": {
             "end": "{0} a {1}"
