--- a/js/data/locale/ha/list.json
+++ b/js/data/locale/ha/list.json
@@ -2,19 +2,19 @@
     "standard": {
         "short": {
             "2": "{0} da {1}",
-            "end": "{0} da {1}"
+            "end": "{0}, da {1}"
         },
         "medium": {
             "2": "{0} da {1}",
-            "end": "{0} da {1}"
+            "end": "{0}, da {1}"
         },
         "long": {
             "2": "{0} da {1}",
-            "end": "{0} da {1}"
+            "end": "{0}, da {1}"
         },
         "full": {
             "2": "{0} da {1}",
-            "end": "{0} da {1}"
+            "end": "{0}, da {1}"
         }
     },
     "or": {
