--- a/js/data/locale/ky/list.json
+++ b/js/data/locale/ky/list.json
@@ -20,19 +20,19 @@
     "or": {
         "short": {
             "2": "{0} же {1}",
-            "end": "{0}, же {1}"
+            "end": "{0} же {1}"
         },
         "medium": {
             "2": "{0} же {1}",
-            "end": "{0}, же {1}"
+            "end": "{0} же {1}"
         },
         "long": {
             "2": "{0} же {1}",
-            "end": "{0}, же {1}"
+            "end": "{0} же {1}"
         },
         "full": {
             "2": "{0} же {1}",
-            "end": "{0}, же {1}"
+            "end": "{0} же {1}"
         }
     },
     "unit": {
