--- a/js/data/locale/mr/list.json
+++ b/js/data/locale/mr/list.json
@@ -20,11 +20,11 @@
     "or": {
         "short": {
             "2": "{0} किंवा {1}",
-            "end": "{0}, किंवा {1}"
+            "end": "{0} किंवा {1}"
         },
         "medium": {
             "2": "{0} किंवा {1}",
-            "end": "{0}, किंवा {1}"
+            "end": "{0} किंवा {1}"
         },
         "long": {
             "2": "{0} किंवा {1}",
