--- a/js/data/locale/my/list.json
+++ b/js/data/locale/my/list.json
@@ -2,52 +2,52 @@
     "standard": {
         "short": {
             "2": "{0}နှင့် {1}",
-            "start": "{0} {1}",
-            "middle": "{0} {1}",
+            "start": "{0} - {1}",
+            "middle": "{0} - {1}",
             "end": "{0}နှင့် {1}"
         },
         "medium": {
             "2": "{0}နှင့် {1}",
-            "start": "{0} {1}",
-            "middle": "{0} {1}",
+            "start": "{0} - {1}",
+            "middle": "{0} - {1}",
             "end": "{0}နှင့် {1}"
         },
         "long": {
             "2": "{0}နှင့် {1}",
-            "start": "{0} {1}",
-            "middle": "{0} {1}",
+            "start": "{0} - {1}",
+            "middle": "{0} - {1}",
             "end": "{0}နှင့် {1}"
         },
         "full": {
             "2": "{0}နှင့် {1}",
-            "start": "{0} {1}",
-            "middle": "{0} {1}",
+            "start": "{0} - {1}",
+            "middle": "{0} - {1}",
             "end": "{0}နှင့် {1}"
         }
     },
     "or": {
         "short": {
             "2": "{0} သို့မဟုတ် {1}",
-            "start": "{0} ၊ {1}",
-            "middle": "{0} {1}",
+            "start": "{0} - {1}",
+            "middle": "{0} - {1}",
             "end": "{0} သို့မဟုတ် {1}"
         },
         "medium": {
             "2": "{0} သို့မဟုတ် {1}",
-            "start": "{0} ၊ {1}",
-            "middle": "{0} {1}",
+            "start": "{0} - {1}",
+            "middle": "{0} - {1}",
             "end": "{0} သို့မဟုတ် {1}"
         },
         "long": {
             "2": "{0} သို့မဟုတ် {1}",
-            "start": "{0} {1}",
-            "middle": "{0} {1}",
+            "start": "{0} - {1}",
+            "middle": "{0} - {1}",
             "end": "{0} သို့မဟုတ် {1}"
         },
         "full": {
             "2": "{0} သို့မဟုတ် {1}",
-            "start": "{0} {1}",
-            "middle": "{0} {1}",
+            "start": "{0} - {1}",
+            "middle": "{0} - {1}",
             "end": "{0} သို့မဟုတ် {1}"
         }
     },
@@ -60,20 +60,20 @@
         },
         "medium": {
             "2": "{0}နှင့် {1}",
-            "start": "{0} {1}",
-            "middle": "{0} {1}",
+            "start": "{0}- {1}",
+            "middle": "{0}- {1}",
             "end": "{0}နှင့် {1}"
         },
         "long": {
             "2": "{0}နှင့်{1}",
-            "start": "{0} {1}",
-            "middle": "{0} {1}",
+            "start": "{0}- {1}",
+            "middle": "{0}- {1}",
             "end": "{0}နှင့် {1}"
         },
         "full": {
             "2": "{0}နှင့်{1}",
-            "start": "{0} {1}",
-            "middle": "{0} {1}",
+            "start": "{0}- {1}",
+            "middle": "{0}- {1}",
             "end": "{0}နှင့် {1}"
         }
     }
