--- a/js/data/locale/pa/list.json
+++ b/js/data/locale/pa/list.json
@@ -23,10 +23,12 @@
             "end": "{0}, ਜਾਂ {1}"
         },
         "long": {
-            "2": "{0} ਜਾਂ {1}"
+            "2": "{0} ਜਾਂ {1}",
+            "end": "{0} ਜਾਂ {1}"
         },
         "full": {
-            "2": "{0} ਜਾਂ {1}"
+            "2": "{0} ਜਾਂ {1}",
+            "end": "{0} ਜਾਂ {1}"
         }
     },
     "unit": {
