Update scripts to latest ISO 15924 and CLDR 40

--- a/js/data/locale/rangeToScript.json
+++ b/js/data/locale/rangeToScript.json
@@ -241,10 +241,7 @@
     ],
     [
         "Arab",
-        1564
-    ],
-    [
-        "Arab",
+        1564,
         1566
     ],
     [
@@ -354,17 +351,17 @@
     ],
     [
         "Arab",
-        2208,
-        2228
+        2160,
+        2190
     ],
     [
         "Arab",
-        2230,
-        2247
+        2192,
+        2193
     ],
     [
         "Arab",
-        2259,
+        2200,
         2273
     ],
     [
@@ -784,7 +781,7 @@
     ],
     [
         "Telu",
-        3133,
+        3132,
         3140
     ],
     [
@@ -806,6 +803,10 @@
         "Telu",
         3160,
         3162
+    ],
+    [
+        "Telu",
+        3165
     ],
     [
         "Telu",
@@ -869,6 +870,7 @@
     ],
     [
         "Knda",
+        3293,
         3294
     ],
     [
@@ -1247,12 +1249,11 @@
     [
         "Tglg",
         5888,
-        5900
+        5909
     ],
     [
         "Tglg",
-        5902,
-        5908
+        5919
     ],
     [
         "Hano",
@@ -1320,11 +1321,6 @@
     [
         "Mong",
         6150,
-        6158
-    ],
-    [
-        "Mong",
-        6160,
         6169
     ],
     [
@@ -1439,17 +1435,17 @@
     [
         "Zinh",
         6832,
-        6848
+        6862
     ],
     [
         "Bali",
         6912,
-        6987
+        6988
     ],
     [
         "Bali",
         6992,
-        7036
+        7038
     ],
     [
         "Sund",
@@ -1616,11 +1612,6 @@
     [
         "Zinh",
         7616,
-        7673
-    ],
-    [
-        "Zinh",
-        7675,
         7679
     ],
     [
@@ -1751,7 +1742,7 @@
     [
         "Zyyy",
         8352,
-        8383
+        8384
     ],
     [
         "Zinh",
@@ -1848,12 +1839,7 @@
     [
         "Glag",
         11264,
-        11310
-    ],
-    [
-        "Glag",
-        11312,
-        11358
+        11359
     ],
     [
         "Latn",
@@ -1950,7 +1936,7 @@
     [
         "Zyyy",
         11776,
-        11858
+        11869
     ],
     [
         "Hani",
@@ -2145,7 +2131,7 @@
     [
         "Hani",
         19968,
-        40956
+        40959
     ],
     [
         "Yiii",
@@ -2195,16 +2181,25 @@
     [
         "Latn",
         42891,
-        42943
-    ],
-    [
-        "Latn",
-        42946,
         42954
     ],
     [
         "Latn",
-        42997,
+        42960,
+        42961
+    ],
+    [
+        "Latn",
+        42963
+    ],
+    [
+        "Latn",
+        42965,
+        42969
+    ],
+    [
+        "Latn",
+        42994,
         43007
     ],
     [
@@ -2463,7 +2458,7 @@
     [
         "Arab",
         64336,
-        64449
+        64450
     ],
     [
         "Arab",
@@ -2477,7 +2472,7 @@
     ],
     [
         "Arab",
-        64848,
+        64832,
         64911
     ],
     [
@@ -2487,8 +2482,12 @@
     ],
     [
         "Arab",
+        64975
+    ],
+    [
+        "Arab",
         65008,
-        65021
+        65023
     ],
     [
         "Zinh",
@@ -2799,6 +2798,46 @@
         66927
     ],
     [
+        "Vith",
+        66928,
+        66938
+    ],
+    [
+        "Vith",
+        66940,
+        66954
+    ],
+    [
+        "Vith",
+        66956,
+        66962
+    ],
+    [
+        "Vith",
+        66964,
+        66965
+    ],
+    [
+        "Vith",
+        66967,
+        66977
+    ],
+    [
+        "Vith",
+        66979,
+        66993
+    ],
+    [
+        "Vith",
+        66995,
+        67001
+    ],
+    [
+        "Vith",
+        67003,
+        67004
+    ],
+    [
         "Lina",
         67072,
         67382
@@ -2812,6 +2851,21 @@
         "Lina",
         67424,
         67431
+    ],
+    [
+        "Latn",
+        67456,
+        67461
+    ],
+    [
+        "Latn",
+        67463,
+        67504
+    ],
+    [
+        "Latn",
+        67506,
+        67514
     ],
     [
         "Cprt",
@@ -3084,6 +3138,11 @@
         69465
     ],
     [
+        "Ougr",
+        69488,
+        69513
+    ],
+    [
         "Chrs",
         69552,
         69579
@@ -3101,7 +3160,7 @@
     [
         "Brah",
         69714,
-        69743
+        69749
     ],
     [
         "Brah",
@@ -3110,7 +3169,7 @@
     [
         "Kthi",
         69760,
-        69825
+        69826
     ],
     [
         "Kthi",
@@ -3320,7 +3379,7 @@
     [
         "Takr",
         71296,
-        71352
+        71353
     ],
     [
         "Takr",
@@ -3340,7 +3399,7 @@
     [
         "Ahom",
         71472,
-        71487
+        71494
     ],
     [
         "Dogr",
@@ -3419,6 +3478,11 @@
         "Soyo",
         72272,
         72354
+    ],
+    [
+        "Cans",
+        72368,
+        72383
     ],
     [
         "Pauc",
@@ -3563,6 +3627,11 @@
         75075
     ],
     [
+        "Cypro_Minoan",
+        77712,
+        77810
+    ],
+    [
         "Egyp",
         77824,
         78894
@@ -3596,6 +3665,16 @@
         "Mroo",
         92782,
         92783
+    ],
+    [
+        "Tnsa",
+        92784,
+        92862
+    ],
+    [
+        "Tnsa",
+        92864,
+        92873
     ],
     [
         "Bass",
@@ -3661,7 +3740,7 @@
         94177
     ],
     [
-        "Zyyy",
+        "Hani",
         94178,
         94179
     ],
@@ -3696,12 +3775,32 @@
     ],
     [
         "Kana",
+        110576,
+        110579
+    ],
+    [
+        "Kana",
+        110581,
+        110587
+    ],
+    [
+        "Kana",
+        110589,
+        110590
+    ],
+    [
+        "Kana",
         110592
     ],
     [
         "Hira",
         110593,
-        110878
+        110879
+    ],
+    [
+        "Kana",
+        110880,
+        110882
     ],
     [
         "Hira",
@@ -3747,6 +3846,21 @@
         "Zyyy",
         113824,
         113827
+    ],
+    [
+        "Zinh",
+        118528,
+        118573
+    ],
+    [
+        "Zinh",
+        118576,
+        118598
+    ],
+    [
+        "Zyyy",
+        118608,
+        118723
     ],
     [
         "Zyyy",
@@ -3801,7 +3915,7 @@
     [
         "Zyyy",
         119214,
-        119272
+        119274
     ],
     [
         "Grek",
@@ -3941,6 +4055,11 @@
         121519
     ],
     [
+        "Latn",
+        122624,
+        122654
+    ],
+    [
         "Glag",
         122880,
         122886
@@ -3986,6 +4105,11 @@
         123215
     ],
     [
+        "Toto",
+        123536,
+        123566
+    ],
+    [
         "Wcho",
         123584,
         123641
@@ -3993,6 +4117,26 @@
     [
         "Wcho",
         123647
+    ],
+    [
+        "Ethi",
+        124896,
+        124902
+    ],
+    [
+        "Ethi",
+        124904,
+        124907
+    ],
+    [
+        "Ethi",
+        124909,
+        124910
+    ],
+    [
+        "Ethi",
+        124912,
+        124926
     ],
     [
         "Mend",
@@ -4259,7 +4403,7 @@
     ],
     [
         "Zyyy",
-        128736,
+        128733,
         128748
     ],
     [
@@ -4281,6 +4425,10 @@
         "Zyyy",
         128992,
         129003
+    ],
+    [
+        "Zyyy",
+        129008
     ],
     [
         "Zyyy",
@@ -4315,16 +4463,6 @@
     [
         "Zyyy",
         129280,
-        129400
-    ],
-    [
-        "Zyyy",
-        129402,
-        129483
-    ],
-    [
-        "Zyyy",
-        129485,
         129619
     ],
     [
@@ -4340,7 +4478,7 @@
     [
         "Zyyy",
         129656,
-        129658
+        129660
     ],
     [
         "Zyyy",
@@ -4350,22 +4488,32 @@
     [
         "Zyyy",
         129680,
-        129704
+        129708
     ],
     [
         "Zyyy",
         129712,
-        129718
+        129722
     ],
     [
         "Zyyy",
         129728,
-        129730
+        129733
     ],
     [
         "Zyyy",
         129744,
-        129750
+        129753
+    ],
+    [
+        "Zyyy",
+        129760,
+        129767
+    ],
+    [
+        "Zyyy",
+        129776,
+        129782
     ],
     [
         "Zyyy",
@@ -4385,12 +4533,12 @@
     [
         "Hani",
         131072,
-        173789
+        173791
     ],
     [
         "Hani",
         173824,
-        177972
+        177976
     ],
     [
         "Hani",
