--- a/js/data/locale/scriptToRange.json
+++ b/js/data/locale/scriptToRange.json
@@ -143,7 +143,7 @@
         ],
         [
             8352,
-            8383
+            8384
         ],
         [
             8448,
@@ -195,7 +195,7 @@
         ],
         [
             11776,
-            11858
+            11869
         ],
         [
             12272,
@@ -362,12 +362,12 @@
             66299
         ],
         [
-            94178,
-            94179
-        ],
-        [
             113824,
             113827
+        ],
+        [
+            118608,
+            118723
         ],
         [
             118784,
@@ -395,7 +395,7 @@
         ],
         [
             119214,
-            119272
+            119274
         ],
         [
             119520,
@@ -555,7 +555,7 @@
             128727
         ],
         [
-            128736,
+            128733,
             128748
         ],
         [
@@ -573,6 +573,9 @@
         [
             128992,
             129003
+        ],
+        [
+            129008
         ],
         [
             129024,
@@ -600,14 +603,6 @@
         ],
         [
             129280,
-            129400
-        ],
-        [
-            129402,
-            129483
-        ],
-        [
-            129485,
             129619
         ],
         [
@@ -620,7 +615,7 @@
         ],
         [
             129656,
-            129658
+            129660
         ],
         [
             129664,
@@ -628,19 +623,27 @@
         ],
         [
             129680,
-            129704
+            129708
         ],
         [
             129712,
-            129718
+            129722
         ],
         [
             129728,
-            129730
+            129733
         ],
         [
             129744,
-            129750
+            129753
+        ],
+        [
+            129760,
+            129767
+        ],
+        [
+            129776,
+            129782
         ],
         [
             129792,
@@ -751,14 +754,21 @@
         ],
         [
             42891,
-            42943
-        ],
-        [
-            42946,
             42954
         ],
         [
-            42997,
+            42960,
+            42961
+        ],
+        [
+            42963
+        ],
+        [
+            42965,
+            42969
+        ],
+        [
+            42994,
             43007
         ],
         [
@@ -784,6 +794,22 @@
         [
             65345,
             65370
+        ],
+        [
+            67456,
+            67461
+        ],
+        [
+            67463,
+            67504
+        ],
+        [
+            67506,
+            67514
+        ],
+        [
+            122624,
+            122654
         ]
     ],
     "Grek": [
@@ -1022,9 +1048,7 @@
             1562
         ],
         [
-            1564
-        ],
-        [
+            1564,
             1566
         ],
         [
@@ -1052,15 +1076,15 @@
             1919
         ],
         [
-            2208,
-            2228
+            2160,
+            2190
         ],
         [
-            2230,
-            2247
+            2192,
+            2193
         ],
         [
-            2259,
+            2200,
             2273
         ],
         [
@@ -1069,14 +1093,14 @@
         ],
         [
             64336,
-            64449
+            64450
         ],
         [
             64467,
             64829
         ],
         [
-            64848,
+            64832,
             64911
         ],
         [
@@ -1084,8 +1108,11 @@
             64967
         ],
         [
+            64975
+        ],
+        [
             65008,
-            65021
+            65023
         ],
         [
             65136,
@@ -1584,7 +1611,7 @@
             3129
         ],
         [
-            3133,
+            3132,
             3140
         ],
         [
@@ -1602,6 +1629,9 @@
         [
             3160,
             3162
+        ],
+        [
+            3165
         ],
         [
             3168,
@@ -1654,6 +1684,7 @@
             3286
         ],
         [
+            3293,
             3294
         ],
         [
@@ -2069,6 +2100,22 @@
         [
             43816,
             43822
+        ],
+        [
+            124896,
+            124902
+        ],
+        [
+            124904,
+            124907
+        ],
+        [
+            124909,
+            124910
+        ],
+        [
+            124912,
+            124926
         ]
     ],
     "Cher": [
@@ -2093,6 +2140,10 @@
         [
             6320,
             6389
+        ],
+        [
+            72368,
+            72383
         ]
     ],
     "Ogam": [
@@ -2139,10 +2190,6 @@
         ],
         [
             6150,
-            6158
-        ],
-        [
-            6160,
             6169
         ],
         [
@@ -2169,7 +2216,7 @@
         ],
         [
             110593,
-            110878
+            110879
         ],
         [
             110928,
@@ -2209,7 +2256,23 @@
             65437
         ],
         [
+            110576,
+            110579
+        ],
+        [
+            110581,
+            110587
+        ],
+        [
+            110589,
+            110590
+        ],
+        [
             110592
+        ],
+        [
+            110880,
+            110882
         ],
         [
             110948,
@@ -2263,7 +2326,7 @@
         ],
         [
             19968,
-            40956
+            40959
         ],
         [
             63744,
@@ -2274,16 +2337,20 @@
             64217
         ],
         [
+            94178,
+            94179
+        ],
+        [
             94192,
             94193
         ],
         [
             131072,
-            173789
+            173791
         ],
         [
             173824,
-            177972
+            177976
         ],
         [
             177984,
@@ -2360,7 +2427,7 @@
         ],
         [
             6832,
-            6848
+            6862
         ],
         [
             7376,
@@ -2386,10 +2453,6 @@
         ],
         [
             7616,
-            7673
-        ],
-        [
-            7675,
             7679
         ],
         [
@@ -2426,6 +2489,14 @@
             70459
         ],
         [
+            118528,
+            118573
+        ],
+        [
+            118576,
+            118598
+        ],
+        [
             119143,
             119145
         ],
@@ -2449,11 +2520,10 @@
     "Tglg": [
         [
             5888,
-            5900
+            5909
         ],
         [
-            5902,
-            5908
+            5919
         ]
     ],
     "Hano": [
@@ -2642,11 +2712,7 @@
     "Glag": [
         [
             11264,
-            11310
-        ],
-        [
-            11312,
-            11358
+            11359
         ],
         [
             122880,
@@ -2735,11 +2801,11 @@
     "Bali": [
         [
             6912,
-            6987
+            6988
         ],
         [
             6992,
-            7036
+            7038
         ]
     ],
     "Xsux": [
@@ -3042,7 +3108,7 @@
     "Kthi": [
         [
             69760,
-            69825
+            69826
         ],
         [
             69837
@@ -3065,7 +3131,7 @@
         ],
         [
             69714,
-            69743
+            69749
         ],
         [
             69759
@@ -3143,7 +3209,7 @@
     "Takr": [
         [
             71296,
-            71352
+            71353
         ],
         [
             71360,
@@ -3451,7 +3517,7 @@
         ],
         [
             71472,
-            71487
+            71494
         ]
     ],
     "Hluw": [
@@ -3829,6 +3895,68 @@
         [
             69296,
             69297
+        ]
+    ],
+    "Cypro_Minoan": [
+        [
+            77712,
+            77810
+        ]
+    ],
+    "Ougr": [
+        [
+            69488,
+            69513
+        ]
+    ],
+    "Tnsa": [
+        [
+            92784,
+            92862
+        ],
+        [
+            92864,
+            92873
+        ]
+    ],
+    "Toto": [
+        [
+            123536,
+            123566
+        ]
+    ],
+    "Vith": [
+        [
+            66928,
+            66938
+        ],
+        [
+            66940,
+            66954
+        ],
+        [
+            66956,
+            66962
+        ],
+        [
+            66964,
+            66965
+        ],
+        [
+            66967,
+            66977
+        ],
+        [
+            66979,
+            66993
+        ],
+        [
+            66995,
+            67001
+        ],
+        [
+            67003,
+            67004
         ]
     ]
 }
