--- a/js/data/locale/pt/PT/plurals.json
+++ b/js/data/locale/pt/PT/plurals.json
@@ -14,5 +14,51 @@
                 ]
             }
         ]
+    },
+    "many": {
+        "or": [
+            {
+                "and": [
+                    {
+                        "eq": [
+                            "e",
+                            0
+                        ]
+                    },
+                    {
+                        "neq": [
+                            "i",
+                            0
+                        ]
+                    },
+                    {
+                        "eq": [
+                            {
+                                "mod": [
+                                    "i",
+                                    1000000
+                                ]
+                            },
+                            0
+                        ]
+                    },
+                    {
+                        "eq": [
+                            "v",
+                            0
+                        ]
+                    }
+                ]
+            },
+            {
+                "neq": [
+                    "e",
+                    [
+                        0,
+                        5
+                    ]
+                ]
+            }
+        ]
     }
 }
