--- a/js/data/locale/unitfmt.json
+++ b/js/data/locale/unitfmt.json
@@ -944,8 +944,8 @@
             "type": "pressure",
             "units": {
                 "metric": ["pascal"],
-                "uscustomary": ["pound-per-square-inch"],
-                "imperial": ["pound-per-square-inch"]
+                "uscustomary": ["pound-force-per-square-inch"],
+                "imperial": ["pound-force-per-square-inch"]
             },
             "maxFractionDigits": 3
         },
